--- a/static/css/style.css
+++ b/static/css/style.css
@@ -637,7 +637,7 @@ textarea:focus {
     -webkit-backdrop-filter: blur(25px);
     border-radius: 12px;
     padding: 3px;
-    margin-top: 30px;
+    margin-top: 40px;
     margin-bottom: 35px;
     border: 1px solid rgba(255, 255, 255, 0.03);
     gap: 2px;
